--- a/layouts/_partials/menu.html
+++ b/layouts/_partials/menu.html
@@ -12,7 +12,7 @@ Renders a menu for the given menu ID.
 
 {{- with index site.Menus $menuID }}
   <nav>
-    <ul>
+    <ul class="gap-8 justify-end inline-flex text-gray-700 text-xl font-bold">
       {{- partial "inline/menu/walk.html" (dict "page" $page "menuEntries" .) }}
     </ul>
   </nav>
