--- a/layouts/_partials/main_hero.html
+++ b/layouts/_partials/main_hero.html
@@ -1,7 +1,7 @@
-<div class="hero-image flex flex-col items-center justify-center gap-5 bg-cover h-[650px] bg-gray-400 bg-blend-multiply bg-[url('{{ .Params.hero_image | absURL }}')] ">
-    <h1 class="text-5xl text-white font-bold">{{ .Title }}</h1>
-    <p class="text-2xl text-white">{{ .Description }}</p>
-    {{ if .Params.button }}
-        <a href="{{ .Params.button.link }}" class="button bg-black text-lg text-white px-5 py-3 rounded-md">{{ .Params.button.text }}</a>
+<div class="hero-image flex flex-col items-center justify-center gap-5 bg-cover h-[650px] bg-gray-400 bg-blend-multiply bg-[url('{{ .hero_image | absURL }}')] ">
+    <h1 class="text-5xl text-white font-bold">{{ .title }}</h1>
+    <p class="text-2xl text-white">{{ .description }}</p>
+    {{ if .button }}
+        <a href="{{ .button.link }}" class="button bg-black text-lg text-white px-5 py-3 rounded-md">{{ .button.text }}</a>
     {{ end }}
 </div>
